bad/add_invalid_types_int_bool.example_compiler_output
ERROR
[1mbad/add_invalid_types_int_bool.lat:3:4: [1;31merror: [0;1maddition is defined only for int values or string values, not `int` and `boolean`[m
	0 + false;
	  [1;32m^[m
